文章详情页优化

--- a/src/App.scss
+++ b/src/App.scss
@@ -17,10 +17,10 @@ input, textarea{
     opacity: 1;
 }
 
-.fade-leave-active {
-    transition: opacity 500ms ease;
-    opacity: 1;
-}
+// .fade-leave-active {
+//     transition: opacity 500ms ease;
+//     opacity: 1;
+// }
 .fade-enter, .fade-leave-active {
     opacity: 0;
 }
