归档页面优化

--- a/src/App.scss
+++ b/src/App.scss
@@ -25,7 +25,7 @@ input, textarea{
     opacity: 0;
 }
 
-//  渐变动画
+//  渐变动画fadefast
 .fadefast-enter-active {
     transition: opacity 500ms ease;
     opacity: 1;
