部分优化调整

--- a/src/App.scss
+++ b/src/App.scss
@@ -10,6 +10,9 @@ input, textarea{
     background: #aad3fe;
     color: #fff;
 }
+.no-padding{
+    padding: 0px;
+}
 
 //  渐变动画fade
 .fade-enter-active {
